# crud

./: .gitignore  .gitlab-ci.yml  .luacheckrc  .luacov  AUTHORS  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  crud-scm-1.rockspec  crud.lua  deps.sh  elect-scm-1.rockspec  elect.lua  luarocks.patch
.github/workflows/: check_on_push.yaml  push_rockspec.yaml  reusable_test.yml  test_on_push.yaml
cartridge/roles/: crud-router.lua  crud-storage.lua
cmake/: FindLuaCheck.cmake  FindTTCtl.cmake
crud/: VERSION.lua.in  borders.lua  cfg.lua  count.lua  cut_rows.lua  delete.lua  get.lua  insert.lua  insert_many.lua  len.lua  locate.lua  ratelimit.lua  readview.lua  replace.lua  replace_many.lua  schema.lua  select.lua  storage.lua  storage_info.lua  truncate.lua  update.lua  upsert.lua  upsert_many.lua  version.lua
crud/common/: batching_utils.lua  call.lua  call_cache.lua  collations.lua  compat.lua  compat_warn.lua  const.lua  dev_checks.lua  heap.lua  rebalance.lua  registry.lua  roles.lua  schema.lua  sharding.lua  sharding_func.lua  sharding_key.lua  sharding_key_cache.lua  stash.lua  state.lua  storage_call.lua  types.lua  utils.lua  vshard_utils.lua  yield_checks.lua
crud/common/map_call_cases/: base_iter.lua  base_postprocessor.lua  batch_insert_iter.lua  batch_postprocessor.lua  batch_upsert_iter.lua
crud/common/sharding/: bucket_ref_unref.lua  init.lua  router_metadata_cache.lua  sharding_func.lua  sharding_key.lua  sharding_metadata.lua  sharding_metadata_cache.lua  storage_metadata_cache.lua  utils.lua
crud/compare/: comparators.lua  conditions.lua  filters.lua  keydef.lua  plan.lua
crud/cont_pairs/: 1x.lua  2x.lua  init.lua
crud/select/: comparators.lua  conditions.lua  executor.lua  filters.lua  iterator.lua  merger.lua  module.lua  plan.lua  type_comparators.lua
crud/select/compat/: common.lua  select.lua  select_old.lua
crud/stats/: init.lua  local_registry.lua  metrics_registry.lua  operation.lua  registry_utils.lua
doc/: pairs.md  playground.lua  select.md
doc/dev/: schema.md
doc/ldoc/: config.ld
elect/: call.lua  checkers.lua  delete.lua  get.lua  heap.lua  insert.lua  iterator.lua  registry.lua  select.lua  update.lua
elect/common/: call.lua  heap.lua  iterator.lua  registry.lua  utils.lua
elect/cont_pairs/: 1x.lua  2x.lua  init.lua
elect/select/: comparators.lua  conditions.lua  executor.lua  filters.lua  iterator.lua  plan.lua
roles/: crud-router.lua  crud-storage.lua
test/: call_test.lua  crud_test.lua  funcs_shadowing_test.lua  heap_test.lua  helper.lua  not_initialized_test.lua  path.lua  pgroup.lua  registry_test.lua
test/doc/: playground_test.lua
test/entrypoint/: 135_issue_server.lua  srv_batch_operations.lua  srv_crud.lua  srv_crud_select.lua  srv_ddl.lua  srv_ddl_reload.lua  srv_migration.lua  srv_not_initialized.lua  srv_read_calls_strategies.lua  srv_reload.lua  srv_say_hi.lua  srv_select.lua  srv_select_big.lua  srv_shadowing.lua  srv_simple_operations.lua  srv_stats.lua  srv_update_schema.lua  srv_vshard_custom.lua
test/entrypoint/srv_batch_operations/: cartridge_init.lua  storage.lua  storage_init.lua
test/entrypoint/srv_bucket_id_pk/: storage.lua
test/entrypoint/srv_ddl/: cartridge_init.lua  router.lua  router_init.lua  storage.lua  storage_init.lua
test/entrypoint/srv_ddl_reload/: cartridge_init.lua  router.lua  router_init.lua  storage.lua  storage_init.lua
test/entrypoint/srv_say_hi/: all.lua  (+2 more)
test/helpers/: storage_stat.lua
test/integration/: 135_issue_test.lua  async_bootstrap_test.lua  borders_test.lua  bucket_id_pk_test.lua  bucket_ref_errors_test.lua  cartridge_reload_test.lua  cfg_test.lua  count_test.lua  crud_select_test.lua  crud_test.lua  custom_bucket_id_test.lua  ddl_sharding_func_test.lua  ddl_sharding_info_reload_test.lua  ddl_sharding_key_test.lua  double_buckets_test.lua  insert_many_test.lua  legacy_storage_call_test.lua  len_test.lua  locate_test.lua  metrics_test.lua  migration_test.lua  my_select_test.lua  pairs_readview_test.lua  pairs_test.lua  privileges_test.lua  read_calls_strategies_test.lua  read_dead_masters_test.lua  read_scenario.lua  readview_not_supported_test.lua  reload_test.lua  replace_many_test.lua  role_test.lua  schema_reload_deadlock_test.lua  schema_test.lua  select_big_test.lua  select_readview_test.lua  select_test.lua  simple_operations_test.lua  stats_test.lua  storages_state_test.lua  (+6 more)
test/performance/: perf_test.lua  select_perf_test.lua
test/tarantool3_helpers/: cluster.lua  cluster_test.lua  config.lua  server.lua  treegen.lua  utils.lua
test/unit/: call_test.lua  cut_result_test.lua  cut_rows_test.lua  funcs_shadowing_test.lua  get_self_vshard_replicaset_test.lua  heap_test.lua  not_initialized_test.lua  parse_conditions_test.lua  privileges_test.lua  registry_test.lua  reverse_inplace_test.lua  select_comparators_test.lua  select_dropped_indexes_test.lua  select_executor_test.lua  select_filters_datetime_test.lua  select_filters_test.lua  select_filters_uuid_test.lua  select_plan_bad_indexes_test.lua  select_plan_test.lua  serialization_test.lua  sharding_key_test.lua  sharding_metadata_test.lua  stats_test.lua  utils_append_array_test.lua  utils_test.lua  validate_bucket_id_test.lua  version_test.lua
test/vshard_helpers/: cluster.lua  server.lua  vclock.lua  vtest.lua
(+30 files in other folders)
